@@ -1,5 +1,8 @@
 2011-03-29  Jason Merrill  <jason@redhat.com>
 
+	PR c++/48166
+	* decl.c (revert_static_member_fn): Strip function-cv-quals.
+
 	PR c++/48296
 	* decl.c (cp_finish_decl): Defer validation of constexpr member
 	functions.
@@ -15,6 +18,7 @@
 	* call.c (reference_binding): Allow direct binding to an array
 	rvalue.
 
+	PR c++/48289
 	* pt.c (build_non_dependent_expr): Keep dereferences outside the
 	NON_DEPENDENT_EXPR.
 
